app/root.css
:root {
  --font-size-base: 16px;
  --form-element-padding-x: 0.75rem;
  --form-element-padding-y: 0.5rem;
  --form-element-border-color: #999999;
  --form-element-border-color-invalid: #dc3545;
  --form-row-gap: 1rem;
  --button-color: #000000;
  --button-background-color: #f0f2f4;
  --button-hover-background-color: #d3d4d5;
  --button-active-background-color: #c6c7c8;
  --button-primary-color: #ffffff;
  --button-primary-background-color: #0d6efd;
  --button-primary-hover-background-color: #0b5ed7;
  --button-primary-active-background-color: #0a58ca;
}

body {
  font-family: sans-serif;
  font-size: var(--font-size-base);
  display: flex;
  padding: 4rem;
}

h1 {
  font-size: 2rem;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: var(--form-row-gap);
}

.form-row {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

label {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding-left: var(--form-element-padding-x);
  padding-right: var(--form-element-padding-x);
  font-weight: bold;
}

label .hint {
  display: block;
  font-size: 0.9rem;
  font-weight: normal;
}

input {
  border: 1px solid var(--form-element-border-color);
  border-radius: 0.25rem;
  font-size: var(--font-size-base);
  padding-left: var(--form-element-padding-x);
  padding-right: var(--form-element-padding-x);
  padding-top: var(--form-element-padding-y);
  padding-bottom: var(--form-element-padding-y);
  width: 25rem;
}

input:focus {
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, .25)
}

.has-error input {
  border: 1px solid var(--form-element-border-color-invalid);
}

.feedback {
  display: none;
  padding-left: var(--form-element-padding-x);
  padding-right: var(--form-element-padding-x);
  font-size: 0.75rem;
}

.has-error .feedback {
  display: block;
  color: var(--form-element-border-color-invalid);
}

.form-actions {
  display: flex;
  flex-direction: row-reverse;
  gap: 0.5rem;
  width: calc(25rem + (var(--form-element-padding-x) * 2));
}

button {
  background-color: var(--button-background-color);
  border: 1px solid var(--button-background-color);
  color: var(--button-color);
  border-radius: 0.25rem;
  cursor: pointer;
  display: flex;
  align-items: center;
  font-size: var(--font-size-base);
  padding-left: var(--form-element-padding-x);
  padding-right: var(--form-element-padding-x);
  padding-top: var(--form-element-padding-y);
  padding-bottom: var(--form-element-padding-y);
}

button svg {
  font-size: calc(var(--font-size-base) * 1.5);
  margin-right: 0.5rem;
}

button:hover {
  background-color: var(--button-hover-background-color);
  border-color: var(--button-hover-background-color);
}

button:focus-visible,
button:active {
  background-color: var(--button-active-background-color);
  border-color: var(--button-active-background-color);
}

button:focus {
  outline: 0;
}

button:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(211, 212, 213, .5);
}

button.primary {
  background-color: var(--button-primary-background-color);
  border-color: var(--button-primary-background-color);
  border: 1px solid var(--button-primary-background-color);
  color: var(--button-primary-color);
}

button.primary:focus-visible,
button.primary:hover {
  background-color: var(--button-primary-hover-background-color);
  border-color: var(--button-primary-hover-background-color);
}

button.primary:active {
  background-color: var(--button-primary-active-background-color);
  border-color: var(--button-primary-active-background-color);
}

button.primary:focus {
  outline: 0;
}

button.primary:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, .5);
}

